sdk/v0.3/together.mdx
---
title: "pixeltable.functions.together"
sidebarTitle: "together"
icon: "square-m"
---

Pixeltable [UDFs](https://pixeltable.readme.io/docs/user-defined-functions-udfs) that wrap various endpoints from the Together AI API. In order to use them, you must first `pip install together` and configure your Together AI credentials, as described in the [Working with Together AI](https://pixeltable.readme.io/docs/together-ai) tutorial.


<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/together.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `chat_completions()` <sub>udf</sub>

Generate chat completions based on a given prompt using a specified model.


Equivalent to the Together AI `chat/completions` API endpoint. For additional details, see: [https://docs.together.ai/reference/chat-completions-1](https://docs.together.ai/reference/chat-completions-1)

Request throttling: Applies the rate limit set in the config (section `together.rate_limits`, key `chat`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install together`


**Signature:**

```python
chat_completions(
    messages: Json,
    model: String,
    max_tokens: Optional[Int],
    stop: Optional[Json],
    temperature: Optional[Float],
    top_p: Optional[Float],
    top_k: Optional[Int],
    repetition_penalty: Optional[Float],
    logprobs: Optional[Int],
    echo: Optional[Bool],
    n: Optional[Int],
    safety_model: Optional[String],
    response_format: Optional[Json],
    tools: Optional[Json],
    tool_choice: Optional[Json]
)-> Json
```

**Parameters:**

- **`messages`** (*Json*): A list of messages comprising the conversation so far.
- **`model`** (*String*): The name of the model to query.

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `mistralai/Mixtral-8x7B-v0.1` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
messages = [{'role': 'user', 'content': tbl.prompt}]
tbl.add_computed_column(response=chat_completions(messages, model='mistralai/Mixtral-8x7B-v0.1'))
```


---

### `completions()` <sub>udf</sub>

Generate completions based on a given prompt using a specified model.


Equivalent to the Together AI `completions` API endpoint. For additional details, see: [https://docs.together.ai/reference/completions-1](https://docs.together.ai/reference/completions-1)

Request throttling: Applies the rate limit set in the config (section `together.rate_limits`, key `chat`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install together`


**Signature:**

```python
completions(
    prompt: String,
    model: String,
    max_tokens: Optional[Int],
    stop: Optional[Json],
    temperature: Optional[Float],
    top_p: Optional[Float],
    top_k: Optional[Int],
    repetition_penalty: Optional[Float],
    logprobs: Optional[Int],
    echo: Optional[Bool],
    n: Optional[Int],
    safety_model: Optional[String]
)-> Json
```

**Parameters:**

- **`prompt`** (*String*): A string providing context for the model to complete.
- **`model`** (*String*): The name of the model to query.

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `mistralai/Mixtral-8x7B-v0.1` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
tbl.add_computed_column(response=completions(tbl.prompt, model='mistralai/Mixtral-8x7B-v0.1'))
```


---

### `embeddings()` <sub>udf</sub>

Query an embedding model for a given string of text.


Equivalent to the Together AI `embeddings` API endpoint. For additional details, see: [https://docs.together.ai/reference/embeddings-2](https://docs.together.ai/reference/embeddings-2)

Request throttling: Applies the rate limit set in the config (section `together.rate_limits`, key `embeddings`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install together`


**Signature:**

```python
embeddings(
    input: String,
    model: String
)-> Array[(None,), Float]
```

**Parameters:**

- **`input`** (*String*): A string providing the text for the model to embed.
- **`model`** (*String*): The name of the embedding model to use.

**Returns:**

- *Array[(None,), Float]*: An array representing the application of the given embedding to `input`.



**Example:**

Add a computed column that applies the model `togethercomputer/m2-bert-80M-8k-retrieval` to an existing Pixeltable column `tbl.text` of the table `tbl`:
```python
tbl.add_computed_column(response=embeddings(tbl.text, model='togethercomputer/m2-bert-80M-8k-retrieval'))
```


---

### `image_generations()` <sub>udf</sub>

Generate images based on a given prompt using a specified model.


Equivalent to the Together AI `images/generations` API endpoint. For additional details, see: [https://docs.together.ai/reference/post_images-generations](https://docs.together.ai/reference/post_images-generations)

Request throttling: Applies the rate limit set in the config (section `together.rate_limits`, key `images`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install together`


**Signature:**

```python
image_generations(
    prompt: String,
    model: String,
    steps: Optional[Int],
    seed: Optional[Int],
    height: Optional[Int],
    width: Optional[Int],
    negative_prompt: Optional[String]
)-> Image
```

**Parameters:**

- **`prompt`** (*String*): A description of the desired images.
- **`model`** (*String*): The model to use for image generation.

**Returns:**

- *Image*: The generated image.



**Example:**

Add a computed column that applies the model `stabilityai/stable-diffusion-xl-base-1.0` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
tbl.add_computed_column(response=image_generations(tbl.prompt, model='stabilityai/stable-diffusion-xl-base-1.0'))
```

